# canadensis

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
canadensis/: Cargo.toml
canadensis/examples/: basic_node.rs  basic_node_redundant.rs  core_node.rs  diagnostic_console.rs  minimal_node.rs  register_client.rs  registers.rs  subscribe_csv.rs  tcp_serial_basic_node.rs  udp_basic_node.rs
canadensis/src/: anonymous.rs  anonymous_publisher.rs  basic.rs  core_node.rs  hash.rs  lib.rs  middleware.rs  minimal.rs  publisher.rs  register.rs  requester.rs  serialize.rs
canadensis/src/node/: basic.rs  core.rs  minimal.rs  mod.rs
canadensis/src/register/: basic.rs
canadensis/src/service/: get_info.rs  heartbeat.rs  mod.rs  pnp_client.rs  port_list.rs  register_server.rs
canadensis/tests/: can_loopback.rs  derive_basic.rs
canadensis_bit_length_set/: Cargo.toml
canadensis_bit_length_set/src/: lib.rs  operator.rs
canadensis_bit_length_set/tests/: basics.rs  combinatorial_explosion.rs
canadensis_bxcan/: Cargo.toml
canadensis_bxcan/src/: lib.rs  pnp.rs  rx.rs  rx_queue.rs  tx.rs
canadensis_can/: .gitignore  Cargo.toml
canadensis_can/examples/: crc.rs
canadensis_can/src/: crc.rs  data.rs  driver.rs  error.rs  heap.rs  lib.rs  queue.rs  rx.rs  transfer.rs  tx.rs  types.rs
canadensis_can/src/queue/: array_queue.rs  mod.rs  queue_only_driver.rs  single_frame_queue.rs
canadensis_can/src/redundant/: deduplicator.rs  mod.rs  redundant_queue.rs
canadensis_can/src/rx/: buildup.rs  session.rs  subscription.rs
canadensis_can/src/tx/: breakdown.rs  tx_test.rs
canadensis_can/tests/: rx.rs  tx.rs
canadensis_codegen_rust/: Cargo.toml  README.md  test.rs
canadensis_codegen_rust/examples/: generate.rs
canadensis_codegen_rust/prdt_compile_test/: Cargo.toml
canadensis_codegen_rust/prdt_compile_test/src/: lib.rs
canadensis_codegen_rust/src/: error.rs  impl_constants.rs  impl_data_type.rs  impl_deserialize.rs  impl_serialize.rs  lib.rs  main.rs  module_tree.rs  size_bits.rs  struct_as_enum.rs
canadensis_codegen_rust/tests/: compile_fail.rs  compile_pass.rs
canadensis_core/: Cargo.toml
canadensis_core/src/: crc.rs  error.rs  lib.rs  session.rs  subscription.rs  time.rs  transfer.rs  transport.rs
canadensis_core/src/time/: u48.rs
canadensis_crc/: Cargo.toml
canadensis_crc/src/: lib.rs
canadensis_data_types/: Cargo.toml  README.md
canadensis_data_types/src/: bits.rs  generated.rs  lib.rs  optimized.rs
canadensis_data_types/src/uavcan/: mod.rs
canadensis_data_types/tests/: bit_array_serialize.rs  optimized_subject_id_list.rs
canadensis_derive_register_block/: Cargo.toml
canadensis_derive_register_block/src/: lib.rs
canadensis_derive_register_block/tests/: derive_basic.rs
canadensis_dsdl_compiler/: Cargo.toml
canadensis_dsdl_compiler/examples/: load_package.rs
canadensis_dsdl_compiler/src/: compile.rs  compiled.rs  error.rs  lib.rs  package.rs  type_key.rs  types.rs
canadensis_dsdl_compiler/src/operators/: attribute.rs  bit_and.rs  equal.rs  not_equal.rs  unary_not.rs
canadensis_dsdl_compiler/src/types/: constant.rs  directive.rs  expression.rs  keywords.rs  set.rs
canadensis_dsdl_compiler/tests/: compile_fail.rs  compile_pass.rs
canadensis_dsdl_frontend/: Cargo.toml
canadensis_dsdl_frontend/examples/: load_package.rs
canadensis_dsdl_frontend/src/: compile.rs  compiled.rs  constants.rs  error.rs  lib.rs  package.rs  type_key.rs  types.rs  warning.rs
canadensis_dsdl_frontend/src/compiled/: package.rs
canadensis_dsdl_frontend/src/operators/: add.rs  attribute.rs  bit_and.rs  bit_or.rs  equal.rs  exponent.rs  mod.rs  not_equal.rs  unary_minus.rs  unary_not.rs  unary_plus.rs
canadensis_dsdl_frontend/src/types/: constant.rs  directive.rs  expression.rs  set.rs  string.rs
canadensis_dsdl_frontend/tests/: compile_fail.rs  compile_pass.rs  package.rs
canadensis_dsdl_frontend/tests/test_config/: mod.rs
canadensis_dsdl_parser/: Cargo.toml
canadensis_dsdl_parser/examples/: print_ast.rs
canadensis_dsdl_parser/src/: ast.rs  dsdl.pest  lib.rs
canadensis_dsdl_parser/src/ast/: types.rs  unescape.rs
canadensis_dsdl_parser/tests/: parse_all_prdt.rs  simple_parse.rs
canadensis_encoding/: Cargo.toml  generate_cursor.rb
canadensis_encoding/src/: bits.rs  cursor.rs  f16_zerocopy.rs  lib.rs
canadensis_encoding/src/cursor/: deserialize.rs  encode.rs  serialize.rs
canadensis_encoding/tests/: composite1.rs  delimited1.rs
canadensis_encoding_derive/: Cargo.toml
canadensis_encoding_derive/src/: attributes.rs  lib.rs
canadensis_encoding_derive/tests/: basic1.rs
canadensis_filter_config/: Cargo.toml
canadensis_filter_config/src/: lib.rs
canadensis_filter_config/tests/: integration1.rs
canadensis_header/: Cargo.toml
canadensis_header/src/: lib.rs
canadensis_linux/: Cargo.toml
canadensis_linux/src/: lib.rs
canadensis_macro/: Cargo.toml  README.md  types_from_dsdl.rs
canadensis_macro/src/: input.rs  lib.rs
canadensis_macro/tests/: dsdl.rs  external_prdt.rs  generate_enum.rs  issue_62.rs  odd_size_in_array.rs
canadensis_node/: Cargo.toml
canadensis_node/examples/: basic_node.rs  basic_node_redundant.rs  minimal_node.rs  register_client.rs  registers.rs
canadensis_node/src/: basic.rs  lib.rs  minimal.rs  node_info.rs  register.rs
canadensis_node/src/register/: basic.rs  block_impl.rs  generate_block_impl.rb
canadensis_pnp_client/: Cargo.toml
canadensis_pnp_client/src/: lib.rs
canadensis_serial/: Cargo.toml
canadensis_serial/src/: cobs.rs  driver.rs  header.rs  header_collector.rs  lib.rs  rx.rs  tx.rs
canadensis_serial/tests/: round_trip.rs  rx.rs  tx.rs
canadensis_udp/: Cargo.toml  pyuavcan_publish_string.py
canadensis_udp/examples/: receive.rs  transmit.rs
canadensis_udp/src/: address.rs  driver.rs  header.rs  lib.rs  rx.rs  socket.rs  tx.rs
canadensis_udp/tests/: loopback_transmit_receive.rs  rx.rs
canadensis_write_crc/: Cargo.toml
canadensis_write_crc/src/: main.rs
examples/s32k146_node/: Cargo.toml  README.md  memory.x  openocd.cfg
(+188 files in other folders)
