[workspace]
members = [
    "canadensis",
    "canadensis_bxcan",
    "canadensis_can",
    "canadensis_core",
    "canadensis_crc",
    "canadensis_data_types",
    "canadensis_derive_register_block",
    "canadensis_filter_config",
    "canadensis_linux",
    "canadensis_pnp_client",
    "canadensis_encoding",
    "canadensis_write_crc"
]
