[package]
name = "canadensis"
version = "0.5.0"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"
keywords = ["embedded", "uavcan", "uav", "can", "cyphal"]
categories = ["embedded", "no-std"]
repository = "https://github.com/samcrow/canadensis"
license = "MIT OR Apache-2.0"
description = "A Cyphal implementation: Node types and re-exports from some other canadensis crates"

[dependencies]
crc-any = { version = "2.4.0", default-features = false  }
fallible_collections = "0.5.1"
heapless = "0.9.1"
half = { version = "2.6.0", default-features = false }
log = "0.4"

# Depends on most other canadensis crates that are not transport-specific
[dependencies.canadensis_core]
version = "0.5.1"
path = "../canadensis_core"
[dependencies.canadensis_derive_register_block]
version = "0.5.0"
path = "../canadensis_derive_register_block"
[dependencies.canadensis_encoding]
version = "0.5.0"
path = "../canadensis_encoding"

# canadensis_data_types is likely to change more frequently. Because of the Heartbeat and NodeInfo types, this is still
# a public dependency.
[dependencies.canadensis_data_types]
version = "0.5.0"
path = "../canadensis_data_types"

[dev-dependencies]
socketcan = { version = "3.5.0", default-features = false }
rand = "0.9.2"
simplelog = "0.12.0"

[dev-dependencies.canadensis_linux]
version = "0.5.0"
path = "../canadensis_linux"
[dev-dependencies.canadensis_can]
version = "0.5.0"
path = "../canadensis_can"
[dev-dependencies.canadensis_serial]
version = "0.5.0"
path = "../canadensis_serial"
[dev-dependencies.canadensis_udp]
version = "0.5.0"
path = "../canadensis_udp"

