[package]
name = "canadensis_bit_length_set"
version = "0.3.1"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["uavcan", "cyphal"]
description = "A bit length set type used to calculate data type sizes when processing Cyphal data structure description language files"
repository = "https://github.com/samcrow/canadensis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1.44"
itertools = "0.10.1"
