[package]
name = "canadensis_bxcan"
version = "0.1.0"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"
description = "Bridge between Canadensis and the BXCAN peripherals found in some microcontrollers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bxcan = ">=0.4, <0.6"
nb = "1.0.0"

[dependencies.canadensis_core]
path = "../canadensis_core"
[dependencies.canadensis_can]
path = "../canadensis_can"
[dependencies.canadensis]
path = "../canadensis"
[dependencies.canadensis_filter_config]
path = "../canadensis_filter_config"
