[package]
name = "canadensis_bxcan"
version = "0.3.1"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"
keywords = ["embedded", "uavcan", "uav", "can", "cyphal"]
categories = ["embedded", "no-std"]
repository = "https://github.com/samcrow/canadensis"
license = "MIT OR Apache-2.0"
description = "Bridge between Canadensis and the BXCAN peripherals found in some microcontrollers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bxcan = "0.7.0"
nb = "1.0.0"
log = "0.4"
fallible_collections = "0.5.1"
heapless = "0.7"
cortex-m = "0.7.3"

[dependencies.canadensis]
version = "0.3.2"
path = "../canadensis"
[dependencies.canadensis_can]
version = "0.3.1"
path = "../canadensis_can"
[dependencies.canadensis_filter_config]
version = "0.2.0"
path = "../canadensis_filter_config"
[dependencies.canadensis_pnp_client]
version = "0.3.0"
path = "../canadensis_pnp_client"
