[package]
name = "canadensis_can"
version = "0.3.1"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"
keywords = ["embedded", "uavcan", "uav", "can", "cyphal"]
categories = ["embedded", "no-std"]
repository = "https://github.com/samcrow/canadensis"
license = "MIT OR Apache-2.0"
description = "A Cyphal implementation: Cyphal/CAN (CAN and CAN FD) transport layer"

[dependencies]
fallible_collections = "0.5.1"
heapless = "0.8.0"
log = { version = "0.4", optional = true }
defmt = { version = "1.0.1", optional = true }
defmt-or-log = { git = "https://github.com/t-moe/defmt-or-log.git", rev = "a16380e8737b18846c45195328fa0b469ccf43f2" }

[dependencies.canadensis_core]
version = "0.3.1"
path = "../canadensis_core"

[dependencies.canadensis_filter_config]
version = "0.2.0"
path = "../canadensis_filter_config"

[features]
# The can-fd feature increases the maximum frame capacity and maximum MTU from 8 to 64 bytes
can-fd = []
defmt = ["dep:defmt", "defmt-or-log/defmt", "canadensis_core/defmt"]
log = ["dep:log", "defmt-or-log/log", "canadensis_core/log"]
