[package]
name = "canadensis_can"
version = "0.5.1"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"
keywords = ["embedded", "uavcan", "uav", "can", "cyphal"]
categories = ["embedded", "no-std"]
repository = "https://github.com/samcrow/canadensis"
license = "MIT OR Apache-2.0"
description = "A Cyphal implementation: Cyphal/CAN (CAN and CAN FD) transport layer"

[dependencies]
bitvec = { version = "1.0.1", default-features = false }
defmt = { version = "1.0", optional = true, features = ["alloc"] }
fallible_collections = "0.5.1"
heapless = "0.9.1"
l0g = "1.0"
num-traits = { version = "0.2.19", default-features = false }

[dependencies.canadensis_core]
version = "0.5.1"
path = "../canadensis_core"

[dependencies.canadensis_filter_config]
version = "0.5.0"
path = "../canadensis_filter_config"

[features]
# The can-fd feature increases the maximum frame capacity and maximum MTU from 8 to 64 bytes
can-fd = []
defmt = ["dep:defmt", "canadensis_core/defmt", "heapless/defmt"]