[package]
name = "canadensis_codegen_rust"
version = "0.3.0"
edition = "2018"
keywords = ["uavcan"]
description = "Generates Rust code for data types based on DSDL files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/samcrow/canadensis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4.0"
clap = "2.33"

[dependencies.canadensis_dsdl_frontend]
version = "0.3.0"
path = "../canadensis_dsdl_frontend"
[dependencies.canadensis_bit_length_set]
version = "0.3.0"
path = "../canadensis_bit_length_set"
