[package]
name = "canadensis_codegen_rust"
version = "0.4.2"
edition = "2018"
keywords = ["cyphal"]
description = "Generates Rust code for data types based on Cyphal DSDL files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/samcrow/canadensis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4.0"
clap = { version = "4.1.0", features = ["cargo"] }
regex = "1.7.0"
num-bigint = "0.4"
thiserror = "1.0.29"

[dependencies.canadensis_dsdl_frontend]
version = "0.4.0"
path = "../canadensis_dsdl_frontend"
[dependencies.canadensis_bit_length_set]
version = "0.3.0"
path = "../canadensis_bit_length_set"
