[package]
name = "canadensis_core"
version = "0.3.1"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"
keywords = ["embedded", "uavcan", "uav", "can", "cyphal"]
categories = ["embedded", "no-std"]
repository = "https://github.com/samcrow/canadensis"
license = "MIT OR Apache-2.0"
description = "A Cyphal implementation: Common definitions"

[dependencies]
fugit = "0.3.7"
fallible_collections = "0.5.1"
heapless = "0.8.0"
log = { version = "0.4.14", optional = true }
nb = "1.0.0"
defmt = { version = "1.0.1", optional = true }
defmt-or-log = { git = "https://github.com/t-moe/defmt-or-log.git", rev = "a16380e8737b18846c45195328fa0b469ccf43f2" }

[features]
defmt = ["dep:defmt", "defmt-or-log/defmt"]
log = ["dep:log", "defmt-or-log/log"]
