[package]
name = "canadensis_core"
version = "0.5.1"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"
keywords = ["embedded", "uavcan", "uav", "can", "cyphal"]
categories = ["embedded", "no-std"]
repository = "https://github.com/samcrow/canadensis"
license = "MIT OR Apache-2.0"
description = "A Cyphal implementation: Common definitions"

[dependencies]
fugit = "0.3.7"
fallible_collections = "0.5.1"
heapless = "0.9.1"
log = "0.4.14"
nb = "1.0.0"
