[package]
name = "canadensis_data_types"
version = "0.1.0"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"
description = "Hand-written definitions for some UAVCAN public regulated data types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.0"
half = "1.7.1"

[dependencies.canadensis_encoding]
version = "0.1.0"
path = "../canadensis_encoding"
[dependencies.canadensis_core]
version = "0.1.0"
path = "../canadensis_core"

