[package]
name = "canadensis_derive_register_block"
version = "0.1.0"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
description = "Derive macro for `canadensis_node::register::RegisterBlock`"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["derive"] }

[dev-dependencies.canadensis_node]
path = "../canadensis_node"

