[package]
name = "canadensis_derive_register_block"
version = "0.2.1"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
description = "Derive macro for `canadensis::register::RegisterBlock`"
keywords = ["template", "proc_macro", "procmacro", "uavcan", "cyphal"]
repository = "https://github.com/samcrow/canadensis"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["derive"] }
