[package]
name = "canadensis_dsdl_compiler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-rational = "0.4"
num-traits = "0.2"
unicode-normalization = "0.1.19"
regex = "1.5.4"
half = "1.7.1"
walkdir = "2.3.2"
thiserror = "1.0.29"
once_cell = "1.8.0"

[dependencies.canadensis_dsdl_parser]
path = "../canadensis_dsdl_parser"
[dependencies.canadensis_bit_length_set]
path = "../canadensis_bit_length_set"
