[package]
name = "canadensis_dsdl_frontend"
version = "0.5.0"
edition = "2018"
keywords = ["uavcan", "cyphal"]
description = "Compiler front-end for the Cyphal Data Structure Description Language"
license = "MIT OR Apache-2.0"
repository = "https://github.com/samcrow/canadensis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-rational = "0.4"
num-traits = "0.2"
unicode-normalization = "0.1.19"
regex = "1.7.0"
half = { version = "2.6.0", default-features = false }
walkdir = "2.3.2"
thiserror = "2.0.16"
once_cell = "1.8.0"
heck = "0.5.0"

[dependencies.canadensis_dsdl_parser]
version = "0.5.0"
path = "../canadensis_dsdl_parser"
[dependencies.canadensis_bit_length_set]
version = "0.5.0"
path = "../canadensis_bit_length_set"

[dev-dependencies]
regex = "1.10.5"
