[package]
name = "canadensis_dsdl_parser"
version = "0.2.1"
edition = "2018"
keywords = ["uavcan", "cyphal"]
description = "Parser for the Cyphal Data Structure Description Language"
license = "MIT OR Apache-2.0"
repository = "https://github.com/samcrow/canadensis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
num-rational = "0.4"
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
walkdir = "2.3.2"
