[package]
name = "canadensis_encoding"
version = "0.2.2"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"
keywords = ["embedded", "uavcan", "uav", "can", "cyphal"]
categories = ["embedded", "no-std"]
repository = "https://github.com/samcrow/canadensis"
license = "MIT OR Apache-2.0"
description = "A Cyphal implementation: Transfer encoding and decoding"

[dependencies]
half = "1.8"
zerocopy = "0.6.0"

[dev-dependencies]
heapless = "0.7.0"
