[package]
name = "canadensis_encoding_derive"
version = "0.0.0"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"

[dependencies.syn]
version = "1.0"
# For debugging only
features = ["extra-traits"]

[dependencies.canadensis_bit_length_set]
path = "../canadensis_bit_length_set"

[dev-dependencies.canadensis_encoding]
path = "../canadensis_encoding"
