[package]
name = "canadensis_filter_config"
description = "Automatic receive filter configuration for Cyphal"
version = "0.2.1"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"
keywords = ["embedded", "uavcan", "uav", "can", "cyphal"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/samcrow/canadensis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "optimize_filters"
path = "bin/optimize_filters.rs"

[dependencies]
