[package]
name = "canadensis_linux"
version = "0.1.0"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketcan = "1.7.0"
log = "0.4"

[dependencies.canadensis_can]
path = "../canadensis_can"
[dependencies.canadensis_core]
path = "../canadensis_core"
[dependencies.canadensis_filter_config]
path = "../canadensis_filter_config"
