[package]
name = "canadensis_linux"
version = "0.2.2"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"
keywords = ["uavcan", "uav", "can", "cyphal"]
repository = "https://github.com/samcrow/canadensis"
license = "MIT OR Apache-2.0"
description = "Linux SocketCAN compatibility for canadensis (Cyphal)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketcan = "1.7.0"
log = "0.4"

[dependencies.canadensis_can]
version = "0.2.0"
path = "../canadensis_can"
[dependencies.canadensis_core]
version = "0.2.0"
path = "../canadensis_core"
[dependencies.canadensis_filter_config]
version = "0.2.0"
path = "../canadensis_filter_config"
