[package]
# TODO: This needs a better name
name = "canadensis_macro"
version = "0.3.1"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
keywords = ["uavcan", "cyphal"]
license = "MIT OR Apache-2.0"
description = "A procedural macro that generates Rust data types and serialization code from inline and/or external Cyphal DSDL files"
edition = "2018"
repository = "https://github.com/samcrow/canadensis"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"

[dependencies.syn]
version = "2.0"
default-features = false

[dependencies.canadensis_dsdl_frontend]
version = "0.4.0"
path = "../canadensis_dsdl_frontend"
[dependencies.canadensis_codegen_rust]
version = "0.4.0"
path = "../canadensis_codegen_rust"

# These dev-dependencies are required by the generated code
[dev-dependencies]
half = { version = ">=2.2, <2.5", default-features = false }
heapless = "0.7.7"
zerocopy = "0.6.0"
memoffset = "0.8.0"
canadensis_encoding = { path = "../canadensis_encoding" }
canadensis_data_types = { path = "../canadensis_data_types" }

