[package]
name = "canadensis_node"
version = "0.1.0"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"
keywords = ["embedded", "uavcan", "uav", "can"]
categories = ["embedded", "no-std"]
documentation = "https://docs.rs/canadensis_node"
repository = "https://github.com/samcrow/canadensis"
license = "MIT OR Apache-2.0"
description = "A UAVCAN v1.0 implementation: Basic node functionality"

[dependencies]
fallible_collections = "0.1.2"

# Local dependency, change before publishing
[dependencies.canadensis_core]
version = "0.1.0"
path = "../canadensis_core"
# Local dependency, change before publishing
[dependencies.canadensis_encoding]
version = "0.1.0"
path = "../canadensis_encoding"

[features]
default = ["node-info"]
# The node-info feature enables handling of uavcan.node.GetInfo requests
node-info = []

[dev-dependencies]
socketcan = "1.7.0"
rand = "0.7.3"

[dev-dependencies.canadensis_can]
version = "0.1.0"
path = "../canadensis_can"
