[package]
name = "canadensis_node"
version = "0.1.0"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"
keywords = ["embedded", "uavcan", "uav", "can"]
categories = ["embedded", "no-std"]
documentation = "https://docs.rs/canadensis_node"
repository = "https://github.com/samcrow/canadensis"
license = "MIT OR Apache-2.0"
description = "A UAVCAN v1.0 implementation: Basic node functionality"

[dependencies]
fallible_collections = "0.1.2"
heapless = "0.7.0"
log = "0.4"
half = "1.6.0"
# Temporary, for debugging only
rtt-target = "0.3.1"

[dependencies.canadensis_can]
path = "../canadensis_can"
[dependencies.canadensis_core]
path = "../canadensis_core"
[dependencies.canadensis_derive_register_block]
path = "../canadensis_derive_register_block"
[dependencies.canadensis_encoding]
path = "../canadensis_encoding"
[dependencies.canadensis]
path = "../canadensis"
[dependencies.canadensis_data_types]
path = "../canadensis_data_types"
[dependencies.canadensis_filter_config]
path = "../canadensis_filter_config"

[dev-dependencies]
socketcan = "1.7.0"
rand = "0.8.3"

[dev-dependencies.canadensis_linux]
path = "../canadensis_linux"
