[package]
name = "canadensis_pnp_client"
version = "0.3.0"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"
description = "Client library for Cyphal plug-and-play node ID allocation"
keywords = ["embedded", "uavcan", "uav", "can", "cyphal"]
categories = ["embedded", "no-std"]
repository = "https://github.com/samcrow/canadensis"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.7"

[dependencies.crc-any]
version = "2.4.0"
default-features = false

[dependencies.canadensis]
version = "0.3.3"
path = "../canadensis"
[dependencies.canadensis_data_types]
version = "0.3.2"
path = "../canadensis_data_types"
[dependencies.canadensis_filter_config]
version = "0.2.0"
path = "../canadensis_filter_config"
