[package]
name = "canadensis_serial"
version = "0.5.0"
edition = "2018"
repository = "https://github.com/samcrow/canadensis"
license = "MIT OR Apache-2.0"
keywords = ["uavcan", "embedded", "cyphal"]
description = "A Cyphal implementation: Cyphal/Serial transport"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerocopy = "0.8.26"
heapless = "0.9.1"
fallible_collections = "0.5.1"
log = "0.4.14"

[dependencies.canadensis_core]
version = "0.5.0"
path = "../canadensis_core"
[dependencies.canadensis_header]
version = "0.5.0"
path = "../canadensis_header"
