[package]
name = "canadensis_udp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash32 = "0.2.1"
hash32-derive = "0.1.1"
heapless = "0.7.7"
zerocopy = "0.6.0"
crc-any = "2.4.0"
fallible_collections = "0.4.3"
log = "0.4.14"

[dependencies.socket2]
version = "0.4.2"
features = ["all"]

[dependencies.canadensis_core]
path = "../canadensis_core"

[dev-dependencies]
simplelog = "0.10.2"

[dev-dependencies.canadensis_linux]
path = "../canadensis_linux"

